# ai-tech-digest

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  agent.md
.github/workflows/: deploy.yml  weekly-digest.yml
content/: resources.json
content/posts/: 2026-02-15.md  2026-02-22.md  2026-03-08.md  2026-03-15.md  2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md
pipeline/: .env.example  pyproject.toml
pipeline/src/: config.py  main.py
pipeline/src/analysis/: analyzer.py  deduplicator.py  prompts.py
pipeline/src/collectors/: arxiv.py  base.py  github_trending.py  hackernews.py  reddit.py  rss_collector.py  web_scraper.py
pipeline/src/publisher/: git_publisher.py  markdown_writer.py
pipeline/tests/: test_analysis.py  test_collectors.py  test_publisher.py
website/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/src/app/: layout.tsx  page.tsx  sitemap.ts
website/src/app/about/: page.tsx
website/src/app/digest/[slug]/: page.tsx
website/src/app/feed.xml/: route.ts
website/src/app/resources/: page.tsx
website/src/components/: CategoryTag.tsx  DigestCard.tsx  Footer.tsx  Header.tsx  ResourceCard.tsx  ResourcesExplorer.tsx  SearchBar.tsx  ShareButtons.tsx  SignificanceBadge.tsx  StoryCard.tsx  TableOfContents.tsx  ThemeToggle.tsx
website/src/lib/: posts.ts  resources.ts  utils.ts
website/src/styles/: globals.css
